@@ -11,6 +11,7 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
         Bill Shupp
 	- enable-onchange-script defaults to no.  
 	  NOTE: Still need to supress error message if file not found.
+        - Fix bug in output format of list_alias
 
 5.4.18 - released 30-Dec-06
 
